Working github links on project pages

--- a/html/project.html
+++ b/html/project.html
@@ -13,8 +13,10 @@
             <main>
                 <h1 class="project-page" id="title"></h1>
                 <div class="project-main-container">
+                    <p id="date"></p>
                     <p id="description"></p>
                     <p id="tech"></p>
+                    <a id="link"></a>
                     <div id="content"></div>
                 </div>
 
