Media added to project page(cat-feeder)

--- a/html/about.html
+++ b/html/about.html
@@ -37,6 +37,7 @@
                   <p>Trying to get better at surfing</p>
                   <p>Enjoy Computer Gaming</p>
                   <p>Love watching and reviewing movies on letterboxd(@haydenRich)</p>
+                  <p>Love many genres of music</p>
                 </div>
               </div>
             </div>
