--- a/html/project.html
+++ b/html/project.html
@@ -16,13 +16,12 @@
                     <p id="date"></p>
                     <p id="description"></p>
                     <p id="tech"></p>
-                    <a id="link"></a>
                     <div id="content"></div>
+                    <a id="link"></a>
+                    <div id="media" class="media-row"></div>
                 </div>
-
             </main>
         <div id="footer"></div>
-
         <script src="/js/project-page.js"></script>
     </body>
 </html>
